--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 
-@import 'settings';
-@import 'foundation';
-@import 'motion-ui';
+@import 'node_modules/foundation-sites/scss/settings/_settings';
+@import 'node_modules/foundation-sites/scss/foundation';
+@import 'node_modules/motion-ui/motion-ui';
 
 @include foundation-global-styles;
 @include foundation-grid;
@@ -41,3 +41,7 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+body {
+	background:red;
+}
