--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -43,10 +43,15 @@
 
 	{{>googletagmanager}}
 
-	
-		{{#markdown }}
-				{{> body  }}
-			{{/markdown }}
+	<div class="row">
+			
+		<div class="small-12 columns">
+			
+			{{> body  }}
+
+		</div><!-- small-12 -->
+
+	</div><!-- row -->
 
 	<script src="/assets/js/jquery.min.js"></script>
 	<script src="/assets/js/foundation.min.js"></script>
