--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -5,7 +5,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>{{metatitle}} - {{site.title}}</title>
+		<title>{{data.metatitle}} - {{site.title}}</title>
 
 		<meta name="description" content="{{metadesc}}">
 
@@ -21,22 +21,22 @@
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-		<link rel="apple-touch-icon" sizes="57x57" href="/{{assets}}/img/favicon/apple-touch-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/{{assets}}/img/favicon/apple-touch-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/{{assets}}/img/favicon/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="/{{assets}}/img/favicon/apple-touch-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="/{{assets}}/img/favicon/apple-touch-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/{{assets}}/img/favicon/apple-touch-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/{{assets}}/img/favicon/apple-touch-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/{{assets}}/img/favicon/apple-touch-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/{{assets}}/img/favicon/apple-touch-icon-180x180.png">
-		<link rel="icon" type="image/png" href="/{{assets}}/img/favicon/favicon-192x192.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="/{{assets}}/img/favicon/favicon-160x160.png" sizes="160x160">
-		<link rel="icon" type="image/png" href="/{{assets}}/img/favicon/favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/png" href="/{{assets}}/img/favicon/favicon-16x16.png" sizes="16x16">
-		<link rel="icon" type="image/png" href="/{{assets}}/img/favicon/favicon-32x32.png" sizes="32x32">
+		<link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="/assets/img/favicon/favicon-192x192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="/assets/img/favicon/favicon-160x160.png" sizes="160x160">
+		<link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="/assets/img/favicon/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="/assets/img/favicon/favicon-32x32.png" sizes="32x32">
 		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="msapplication-TileImage" content="/{{assets}}/img/favicon/mstile-144x144.png">
+		<meta name="msapplication-TileImage" content="/assets/img/favicon/mstile-144x144.png">
 
 	</head>
 <body>
@@ -47,7 +47,10 @@
 			
 		<div class="small-12 columns">
 			
-			{{> body  }}
+			
+
+			{{>body}}
+
 
 		</div><!-- small-12 -->
 
